[project]
name = "shazaming"
version = "0.1.0"
description = "Automatically identify tracks in a SoundCloud mix using Shazam"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pydub>=0.25.1",
    "shazamio>=0.8.1",
    "yt-dlp>=2026.3.17",
]

[project.scripts]
shazaming = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
